kustomize/ingress-gateway/ingress-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: ingress-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-server
  namespace: ingress-gateway
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        exact: /admin
    route:
    - destination:
        host: admin-panel.admin-panel.svc.cluster.local # TODO: Update this to user-defined
        port:
          number: 80
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: main-api-service.main-api-service.svc.cluster.local # TODO: Update this to user-defined
        port:
          number: 80
  # - match:
  #   - uri:
  #       exact: /chat
  #   route:
  #   - destination:
  #       host: frontend.frontend.svc.cluster.local # TODO: update this to user-defined
  #       port:
  #         number: 80
